--- a/Tesis/Views/MainFlyoutPage.xaml
+++ b/Tesis/Views/MainFlyoutPage.xaml
@@ -49,7 +49,7 @@
                             HorizontalOptions="Start"
                             FontSize="16"
                             FontAttributes="Bold" />
-                    
+
                     <Button Text="Administrar Usuarios"
                             Command="{Binding ShowUserListCommand}"
                             BackgroundColor="Transparent"
@@ -78,14 +78,16 @@
     </FlyoutPage.Flyout>
 
     <!-- Contenido principal (Detail) -->
-    <FlyoutPage.Detail>
+    <!--<FlyoutPage.Detail>
         <NavigationPage BarBackgroundColor="#ADD8E6" BarTextColor="#363636">
             <x:Arguments>
                 <ContentPage Title="Inicio"
                          BackgroundColor="#ADD8E6"
                             Padding="20">
                     <StackLayout Padding="20" Spacing="20" VerticalOptions="CenterAndExpand">
-                        <!-- Bienvenida -->
+                        -->
+    <!-- Bienvenida -->
+    <!--
                         <Frame BackgroundColor="#FFFFFF" BorderColor="#D3D3D3" CornerRadius="15" Padding="20">
                             <Label Text="¡Bienvenido a la aplicación!"
                                    FontSize="20"
@@ -94,7 +96,9 @@
                                    TextColor="#363636"/>
                         </Frame>
 
-                        <!-- Información principal -->
+                        -->
+    <!-- Información principal -->
+    <!--
                         <StackLayout Spacing="10">
                             <Label Text="Aquí puedes acceder a las funciones principales de la aplicación."
                                    FontSize="16"
@@ -112,5 +116,5 @@
                 </ContentPage>
             </x:Arguments>
         </NavigationPage>
-    </FlyoutPage.Detail>
+    </FlyoutPage.Detail>-->
 </FlyoutPage>
